Use JDK8 instead of JDK11 max jdk version supported by our current Spark/Scala runtime.
Use ImmutableMap.of and ImmutableSet.of for API "compliancy" with Map.of and List.of