@@ -1,5 +1,7 @@
 package no.ssb.dapla.dlp.pseudo.func;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import no.ssb.dapla.dlp.pseudo.func.PseudoFuncRegistry.PseudoFuncNotFoundException;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -13,12 +15,12 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 class PseudoFuncRegistryTest {
     private static PseudoFuncRegistry registry = new PseudoFuncRegistry();
 
-    private final static List<PseudoFuncConfig> GENERIC_CONFIG = List.of(
-      new PseudoFuncConfig(Map.of(
+    private final static List<PseudoFuncConfig> GENERIC_CONFIG = ImmutableList.of(
+      new PseudoFuncConfig(ImmutableMap.of(
         PseudoFuncConfig.Param.FUNC_NAME, "dummy-1",
         PseudoFuncConfig.Param.FUNC_IMPL, DummyFunc.class.getName()
       )),
-      new PseudoFuncConfig(Map.of(
+      new PseudoFuncConfig(ImmutableMap.of(
         PseudoFuncConfig.Param.FUNC_NAME, "dummy-2",
         PseudoFuncConfig.Param.FUNC_IMPL, DummyFunc.class.getName()
       ))
